[package]
name = "ironrdp-client"
version = "0.1.0"
readme = "README.md"
description = "Portable RDP client without GPU acceleration using softbuffer and winit for windowing"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["rustls"]
rustls = ["dep:tokio-rustls", "ironrdp-session/rustls"]
native-tls = ["dep:async-native-tls", "ironrdp-session/native-tls"]

[dependencies]

# Protocols
ironrdp.workspace = true
ironrdp-input.workspace = true
ironrdp-session.workspace = true
sspi = { workspace = true, features = ["network_client"] } # TODO: enable dns_resolver at some point

# GUI
softbuffer = "0.2.0"
winit = "0.28.3"

# CLI
clap = { version = "4.2", features = ["derive", "cargo"] }
exitcode = "1.1.2"
inquire = "0.6.0"

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

# SSL
x509-parser = "0.15"
async-native-tls = { version = "0.5", default-features = false, features = [ "runtime-tokio" ], optional = true }
tokio-rustls =  { version = "0.24", features = ["dangerous_configuration"], optional = true }

# Async, futures
tokio = { version = "1", features = ["full"]}
tokio-util = { version = "0.7.7", features = ["compat"] }
futures-util = "0.3"

# Utils
chrono = "0.4.24"
whoami = "1.4.0"
anyhow = "1.0.70"
smallvec = "1.10.0"
tap = "1.0.1"
