[package]
name = "ironrdp-client"
version = "0.1.0"
readme = "README.md"
description = "Portable RDP client without GPU acceleration using softbuffer and winit for windowing"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["rustls"]
rustls = ["ironrdp-tls/rustls"]
native-tls = ["ironrdp-tls/native-tls"]

[dependencies]

# Protocols
ironrdp = { workspace = true, features = ["input", "graphics"] }
ironrdp-tls.workspace = true
ironrdp-async = { workspace = true, features = ["tokio"] }
sspi = { workspace = true, features = ["network_client"] } # TODO: enable dns_resolver at some point

# GUI
softbuffer = "0.2.0"
winit = "0.28.3"

# CLI
clap = { version = "4.2", features = ["derive", "cargo"] }
exitcode = "1.1.2"
inquire = "0.6.0"

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

# Async, futures
tokio = { version = "1", features = ["full"]}
tokio-util = { version = "0.7.7", features = ["compat"] }
futures-util = "0.3"

# Utils
chrono = "0.4.24"
whoami = "1.4.0"
anyhow = "1.0.70"
smallvec = "1.10.0"
tap = "1.0.1"
semver = "1"
