[package]
name = "ironrdp-glutin-renderer"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/Devolutions/IronRDP"
repository = "https://github.com/Devolutions/IronRDP"
authors = ["Devolutions Inc. <infos@devolutions.net>"]

[dependencies]
ironrdp = { path = "../.." }
glow = "0.11"
log = "0.4"
thiserror = "1.0.38"
glutin = { version = "0.29" }
openh264  = { version = "0.3" }
