[package]
name = "ironrdp-glutin-renderer"
version = "0.1.0"
readme = "README.md"
description = "`glutin` primitives for OpenGL rendering"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ironrdp.workspace = true
tracing.workspace = true
thiserror = "1.0.38"
glow = "0.11"
glutin = { version = "0.29" }
openh264  = { version = "0.3" }
