[package]
name = "ironrdp-graphics"
version = "0.1.0"
readme = "README.md"
description = "RDP image processing primitives"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ironrdp-pdu.workspace = true
num-traits = "0.2.15"
num-derive = "0.3.3"
byteorder = "1.4.3"
thiserror = "1.0.40"
bitvec = "1.0.1"
bit_field = "0.10.2"
bitflags = "2"
lazy_static = "1.4.0"

[dev-dependencies]
bmp.workspace = true
expect-test.workspace = true
hex-literal = "0.3.4"
proptest = "1.1.0"
rdp-rs = { git = "https://github.com/citronneur/rdp-rs", rev = "7ac880d7efb7f05efef3c84476f7c24f4053e0ea" }
rstest = "0.17.0"
