[package]
name = "ironrdp-acceptor"
version = "0.3.2"
readme = "README.md"
description = "State machines to drive an RDP connection acceptance sequence"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
doctest = false
test = false

[dependencies]
ironrdp-core = { path = "../ironrdp-core", version = "0.1", features = ["alloc"] }
ironrdp-pdu = { path = "../ironrdp-pdu", version = "0.4" }
ironrdp-svc = { path = "../ironrdp-svc", version = "0.2" }
ironrdp-connector = { path = "../ironrdp-connector", version = "0.3" }
ironrdp-async = { path = "../ironrdp-async", version = "0.3" }
tracing = { version = "0.1", features = ["log"] }

[lints]
workspace = true

