[package]
name = "ironrdp-agent"
version = "0.1.0"
readme = "README.md"
description = "Agentic remote desktop client daemon and CLI"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
default-run = "ironrdp-agent"

# Not publishing for now.
publish = false

[[bin]]
name = "ironrdp-agent"
test = false

[dependencies]
ironrdp = { path = "../ironrdp", version = "0.14", features = ["input"] }
ironrdp-client = { path = "../ironrdp-client", default-features = false, features = ["rustls"] }

anyhow = "1"
bytes = "1"
clap = { version = "4.6", features = ["derive", "cargo"] }
http-body-util = "0.1"
hyper = { version = "1.9", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = ">=1.16, <1.21", features = ["v4"] }

[lints]
workspace = true
