[package]
name = "ironrdp-agent"
version = "0.0.0"
readme = "README.md"
description = "CLI-driven, daemon-backed agentic RDP client suitable for LLM consumption"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

# Not publishing for now.
publish = false

[lib]
doctest = false
test = false

[[bin]]
name = "ironrdp-agent"
path = "src/main.rs"
test = false

[features]
# Exposes otherwise-internal modules (e.g. the wire codec helpers) for unit testing from the
# workspace test suite. Hidden from docs; not intended for downstream use.
internal = []

[dependencies]
# RDP client engine: only the TLS backend is mandated
ironrdp-client = { path = "../ironrdp-client", features = ["rustls"] }

# Configuration model and codecs
ironrdp-core = { path = "../ironrdp-core", features = ["alloc"] }
ironrdp-pdu = { path = "../ironrdp-pdu" }
ironrdp-propertyset = { path = "../ironrdp-propertyset" }
ironrdp-cfg = { path = "../ironrdp-cfg" }
ironrdp-rdpfile = { path = "../ironrdp-rdpfile" }
ironrdp-input = { path = "../ironrdp-input" }

# Async runtime and IPC transport
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "io-util", "time", "signal"] }

# CLI
clap = { version = "4.6", features = ["derive", "cargo"] }

# Logging (ring-buffer tracing layer)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# PNG encoding for screenshots
png = "0.18"

# Utils
anyhow = "1"
whoami = "2.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints]
workspace = true
