[package]
name = "ironrdp-ainput"
version = "0.1.0"
readme = "README.md"
description = "dynamic channel implementation"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
doctest = false
test = false

[dependencies]
bitflags.workspace = true
ironrdp-core.workspace = true
ironrdp-dvc.workspace = true
num-derive.workspace = true # TODO: remove
num-traits.workspace = true # TODO: remove

[lints]
workspace = true

