[package]
name = "ironrdp-ainput"
version = "0.1.3"
readme = "README.md"
description = "AInput dynamic channel implementation"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
doctest = false
test = false

[dependencies]
bitflags = "2.4"
ironrdp-core = { path = "../ironrdp-core", version = "0.1" }
ironrdp-dvc = { path = "../ironrdp-dvc", version = "0.1" }
num-derive.workspace = true # TODO: remove
num-traits.workspace = true # TODO: remove

[lints]
workspace = true

