[package]
name = "ironrdp-async"
version = "0.2.1"
readme = "README.md"
description = "Provides `Future`s wrapping the IronRDP state machines conveniently"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
doctest = false
test = false

[dependencies]
bytes = "1"
ironrdp-connector.workspace = true
ironrdp-core = { workspace = true, features = ["alloc"] }
ironrdp-pdu.workspace = true
# ironrdp-session.workspace = true
tracing.workspace = true

[lints]
workspace = true

