[package]
name = "ironrdp-async"
version = "0.3.1"
readme = "README.md"
description = "Provides `Future`s wrapping the IronRDP state machines conveniently"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
doctest = false
test = false

[dependencies]
ironrdp-connector = { path = "../ironrdp-connector", version = "0.3" }
ironrdp-core = { path = "../ironrdp-core", version = "0.1", features = ["alloc"] }
ironrdp-pdu = { path = "../ironrdp-pdu", version = "0.3" }
# ironrdp-session = { workspace = "../ironrdp-session", version = "0.2" }
tracing = { version = "0.1", features = ["log"] }
bytes = "1"

[lints]
workspace = true
