[package]
name = "ironrdp-bench"
version = "0.0.0"
description = "IronRDP benchmarks"
edition.workspace = true
publish = false

[dev-dependencies]
criterion = "0.6"
ironrdp-graphics.path = "../ironrdp-graphics"
ironrdp-pdu.path = "../ironrdp-pdu"
ironrdp-server = { path = "../ironrdp-server", features = ["__bench"] }

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[lints]
workspace = true
