[package]
name = "ironrdp-blocking"
version = "0.3.1"
readme = "README.md"
description = "Blocking I/O abstraction wrapping the IronRDP state machines conveniently"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
doctest = false
test = false

[dependencies]
bytes = "1"
ironrdp-connector = { path = "../ironrdp-connector", version = "0.3" }
ironrdp-core = { path = "../ironrdp-core", version = "0.1", features = ["alloc"] }
ironrdp-pdu = { path = "../ironrdp-pdu", version = "0.3" }
# ironrdp-session = { path = "../ironrdp-session", version = "0.2" }
tracing = { version = "0.1", features = ["log"] }

[lints]
workspace = true

